import extension_api_pb2 as pb2


def get_boards():
    return [
        pb2.Board(
            id="1",
            site_id="1",
            name="綜合",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://sora.komica.org/00",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="2",
            site_id="1",
            name="男性角色",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://sora.komica.org/38",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="3",
            site_id="1",
            name="短片2",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://sora.komica.org/69",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="4",
            site_id="1",
            name="寫真",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://sora.komica.org/16",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="5",
            site_id="1",
            name="女性角色",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://luna.komica.org/19",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="6",
            site_id="1",
            name="歡樂惡搞",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://luna.komica.org/12",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="7",
            site_id="1",
            name="Vtuber",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://luna.komica.org/74",
            supported_threads_sorting=["latest_replied"]
        ),
        pb2.Board(
            id="8",
            site_id="1",
            name="GIF",
            icon="https://komica1.org/favicon.ico",
            large_welcome_image="",
            url="https://luna.komica.org/23",
            supported_threads_sorting=["latest_replied"]
        )
    ]
